2001-03-02  Andy Hertzfeld  <andy@eazel.com>

	* src/nautilus-property-browser.c:
	(nautilus_property_browser_update_contents):
	fixed bug 7283, wrong pattern dragged when property browser is
	scrolled, by revert yesterday's border box change that caused it.
	
2001-03-02  John Sullivan  <sullivan@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>

	Refixed bug 5863 (Opening folder triggers recalculation
	of deep count in Properties window)

	The deep count was being invalidated by the directory
	loading mechanism, which is legal and should be
	harmless. Taught the properties window not to do the
	visible recount whenever deep count is invalidated.

	* src/file-manager/fm-properties-window.c:
	(directory_contents_value_field_update): Set new
	deep_count_finished variable when the deep count is
	done. Afterwards, only update the display if a new
	deep count is completed (don't show future count-ups).

2001-03-01  Eric Fischer  <eric@eazel.com>

	reviewed by: Michael Engber <engber@eazel.com>

	* nautilus.spec.in:
	Fix tinderbox breakage by adding missing AC_SUBST lines for
	version number dependencies that got moved from the spec file
	to the configure file.

2001-03-01  Darin Adler  <darin@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	Fixed bug 7156 (Opening multiple folders with tree view on causes
	timed wait dialogs for all but the first (folders never open)):

	* libnautilus-extensions/nautilus-directory-async.c:
	(async_job_start), (async_job_end): Added some debug code (turned
	off).
	(dequeue_pending_idle_callback): Fix problem where in the cancel
	case we did not do a nautilus_directory_async_state_changed. This
	didn't actually cause the bug.
	(nautilus_directory_stop_monitoring_file_list): The actual bug
	fix. Use the correct cancel function here. The old one didn't do
	all the cancelling work.
	(cancel_loading_attributes),
	(nautilus_directory_cancel_loading_file_attributes): Two more
	cases where we needed a call to